fix subtasks visibilty

--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-bottom:30px;
 }
 
 .due-date-section {
@@ -47,7 +48,7 @@
 .seperator-content {
   background-color: #d1d1d1;
   width: 1px;
-  height: 424px;
+  height: 460px;
 }
 
 .right-content {
@@ -120,6 +121,7 @@ textarea:focus {
 .priority-section {
   display: flex;
   flex-direction: column;
+  margin-top: 27px;
 }
 
 .priority-buttons-container {
@@ -158,6 +160,7 @@ textarea:focus {
 .assigned-section {
   display: flex;
   flex-direction: column;
+  margin-bottom:27px;
 }
 
 .category-section {
@@ -231,6 +234,7 @@ textarea:focus {
   margin: 8px 0 0 0;
   overflow-y: scroll;
   height: 65px;
+  visibility: hidden;
 }
 
 .subtask-list::-webkit-scrollbar-button{
@@ -600,10 +604,6 @@ textarea:focus {
   flex-wrap: wrap;
   gap: 8px;
   margin-top:10px;
-}
-
-.selected-contacts.hidden {
-  display: none;
 }
 
 .contact-badge {
